--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -268,17 +268,16 @@
     {% endif %}
 
     <div class="comprehension-error-green" id="correct-message" >
-        Correct answer! Please press 'Next'.
+        {{ comprehension_error_green }}
     </div>
 
     <div class="comprehension-error-red" id="incorrect-message" >
-        Wrong answer! Please select the correct answer.
+        {{ comprehension_error_red }}
     </div>
 
     <div class="comprehension-error-greenTF" id="correct-messageTF" >
-        Correct answer! Please answer the other question correctly.
+        {{ comprehension_error_greenTF }}
     </div>
-
 
 
     {% if "2PP" in player.treatment %}
@@ -286,16 +285,15 @@
         <div class='responsive-div'>
 
             <p>
-                If <b>Person B</b> removes <b>1 point</b> from <b>Person A</b> in Stage 2,
-                <b>what happens?</b>
+                {{ comprehension_2PP }}
             </p>
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-comprehension2PP">
-                    <div class="comprehension-option" data-value="0" >Person A loses 3 points and Person B loses 0.33 points.</div>
-                    <div class="comprehension-option" data-value="1" >Person A loses 3 points and Person B loses 1 point.</div>
-                    <div class="comprehension-option" data-value="2" >Person A loses 1 point and Person B loses 0.33 points.</div>
-                    <div class="comprehension-option" data-value="3" >Person A loses 1 point and Person B loses 1 point.</div>
+                    <div class="comprehension-option" data-value="0" >{{ comprehension_2PP_answer0 }} </div>
+                    <div class="comprehension-option" data-value="1" >{{ comprehension_2PP_answer1 }} </div>
+                    <div class="comprehension-option" data-value="2" >{{ comprehension_2PP_answer2 }} </div>
+                    <div class="comprehension-option" data-value="3" >{{ comprehension_2PP_answer3 }} </div>
                 </div>
             </div>
 
@@ -315,10 +313,10 @@
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-comprehension3PR">
-                    <div class="comprehension-option" data-value="0" >Person A gains 1 point and Person C loses 0.33 points. </div>
-                    <div class="comprehension-option" data-value="1" >Person A gains 1 point and Person C loses 1 point.</div>
-                    <div class="comprehension-option" data-value="2" >Person A gains 3 points and Person C loses 0.33 points.</div>
-                    <div class="comprehension-option" data-value="3" >Person A gains 3 points and Person C loses 1 point.</div>
+                    <div class="comprehension-option" data-value="0" >{{ comprehension_2PP_answer0 }} </div>
+                    <div class="comprehension-option" data-value="1" >{{ comprehension_2PP_answer1 }} </div>
+                    <div class="comprehension-option" data-value="2" >{{ comprehension_2PP_answer2 }} </div>
+                    <div class="comprehension-option" data-value="3" >{{ comprehension_2PP_answer3 }} </div>
                 </div>
             </div>
 
