--- a/demographics/RelationalMobility.html
+++ b/demographics/RelationalMobility.html
@@ -90,7 +90,7 @@
     <input type="hidden" name="choosing_3" id="selected-answer-6" value="">
 
     <p>
-        First, how much do you feel the following statements accurately describe people in the immediate society in which you live
+        How much do you feel the following statements accurately describe people in the immediate society in which you live
         (such as your friends and acquaintances, colleagues in your workplace, and people in your neighborhood etc.)?
         Regarding those people around you, please indicate to what extent you agree or disagree with the following statements.
     </p>
