--- a/crowding_out/ConditionalCoopPage.html
+++ b/crowding_out/ConditionalCoopPage.html
@@ -1,10 +1,10 @@
 {{ block title }}
 
 <div class="block-header">
-    Block 2
+    {{ button_block|safe }} 2
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} {{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
@@ -38,6 +38,8 @@
 
     var current_treatment = "{{ treatment_incentive }}";
 
+    var error1 = "{{ error1 }}";
+
     total_endowment = {{ total_endowment }}
     receiver_endowment = {{ receiver_endowment }}
     incentive = {{ incentive }}
@@ -47,7 +49,7 @@
     const errorDiv = document.querySelector('.otree-form-errors');
 
     if (errorDiv) {
-        errorDiv.textContent = 'Please make a decision to continue.'
+        errorDiv.textContent = error1
     }
 
 
@@ -418,8 +420,8 @@
         </div>
 
         <div class="extras-container {% if treatment_incentive %}treatment-true{% else %}treatment-false{% endif %}">
-            <p><b class="label-a">PERSON A</b></p>
-            <p><b class="label-charity">CHARITY</b></p>
+            <p><b class="label-a">{{ person_a|safe }}</b></p>
+            <p><b class="label-charity">{{ button_charity|safe }}</b></p>
 
             <span class='coinstack coinstackD-static'></span>
             <div class="coin-count-labelD-static" id="countD"></div>
@@ -438,34 +440,69 @@
          </div>
         <br>
 
-        <p style="text-align: center; ">
-            {{ text1|safe }}
-        </p>
+        {% if non_donor %}
+
+            <p style="text-align: center; ">
+                {{ cond_coop_kept|safe }}
+            </p>
+
+        {% else %}
+
+            <p style="text-align: center; ">
+                {{ cond_coop_gave|safe }}
+            </p>
+
+        {% endif %}
 
         <p style="text-align: center; ">
-            {{ text2|safe }}
+            <b> {{ cond_coop_question|safe }} </b>
         </p>
         <br>
 
-            <input type="hidden" name="cond_coop" id="selected-proportion-1">
+        <input type="hidden" name="cond_coop" id="selected-proportion-1">
 
         <!--{{ formfield_errors 'cond_coop' }}-->
 
-            <div class='numbers' >
-                <div class="proportion-row"  data-input="selected-proportion-1">
-                    <div class="proportion" data-value="80" >{{ text3|safe }} <b style="color: red;">80</b> {{ text4|safe }}</div>
-                    <div class="proportion" data-value="60" >{{ text3|safe }} <b style="color: red;">60</b> {{ text4|safe }}</div>
-                    <div class="proportion" data-value="40" >{{ text3|safe }} <b style="color: red;">40</b> {{ text4|safe }}</div>
-                    <div class="proportion" data-value="20" >{{ text3|safe }} <b style="color: red;">20</b> {{ text4|safe }}</div>
-                    <div class="proportion" data-value="0" >{{ text5|safe }} </div>
+        {% if non_donor %}
+
+        <div class='numbers'>
+            <div class="proportion-row" data-input="selected-proportion-1">
+                {% for btn in cond_coop_decision_kept_buttons %}
+                    <div class="proportion" data-value="{{ btn.value }}">
+                        {{ btn.text|safe }}
+                    </div>
+                {% endfor %}
+                <div class="proportion" data-value="0"> {{ kept_unconditionally|safe }} </div>
+            </div>
+        </div>
+
+
+        <br>
+
+        <p style="text-align: center; ">
+            {{ cond_coop_incentive_kept|safe }}
+        </p>
+
+        {% else %}
+
+            <div class='numbers'>
+                <div class="proportion-row" data-input="selected-proportion-1">
+                    {% for btn in cond_coop_decision_gave_buttons %}
+                        <div class="proportion" data-value="{{ btn.value }}">
+                            {{ btn.text|safe }}
+                        </div>
+                    {% endfor %}
+                    <div class="proportion" data-value="0"> {{ gave_unconditionally|safe }} </div>
                 </div>
             </div>
 
         <br>
 
         <p style="text-align: center; ">
-            {{ text6|safe }}
+            {{ cond_coop_incentive_gave|safe }}
         </p>
+
+        {% endif %}
 
         <br>
 
@@ -499,7 +536,7 @@
                        font-size: 1rem;
                        border-radius: 0.25rem;
                        padding: 4px 12px;" type="button" id="submit-button">
-            Next
+            {{ button_next|safe }}
         </button>
     </div>
 
